# tiralabra

./: .coveragerc  README.md  pyproject.toml
Dokumentaatio/: Testausdokumentti.md  Viikkoraportti 1.md  Viikkoraportti 2.md  Viikkoraportti 3.md  maarittelydokumentti.md  todo-list.md
src/: dijkstra_almost_naive.py  dijkstra_with_aliases_and_extras.py  dijkstra_with_extras.py  djikstra.py  djikstra_almost_naive.py  djikstra_with_extras.py  ida_star.py  testeri.py
src/downloader/: downloader.py
src/entities/: Graph.py  Verkko.py  graph.py
src/ui/: mock_gui.py
