[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["sanikk <sanikk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
coverage = "^6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
